--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <svg width="18" height="18" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M12 2a10 10 0 100 20 10 10 0 000-20zm.5 3v6l4 2-.5.87-4.5-2.37V5h1z"></path>
           </svg>
-          Actuated UMI Platform
+          Actuated UMI Gripper
         </a>
 
         <!-- arXiv -->
@@ -88,7 +88,7 @@
   <section id="video" class="max-w-5xl mx-auto px-6 pb-4">
     <h2 class="text-2xl font-extrabold mb-4 text-emerald-900">Project Video</h2>
     <div class="rounded-2xl overflow-hidden shadow">
-      <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/VIDEO_ID" title="Project Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/jqvu804Pk8w" title="Project Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <p class="mt-2 text-sm text-emerald-700">Replace <code>VIDEO_ID</code> with your YouTube ID.</p>
   </section>
@@ -123,7 +123,7 @@
 
     <!-- Author 1 -->
     <div class="card p-4 flex flex-col items-center text-center bg-white/70 rounded-2xl shadow-sm hover:shadow-md transition">
-      <img src="images/erik.jpg" alt="Erik Helmut" class="w-20 h-20 rounded-full object-cover border-2 border-emerald-200 mb-3" />
+      <img src="images/erik.png" alt="Erik Helmut" class="w-20 h-20 rounded-full object-cover border-2 border-emerald-200 mb-3" />
       <div>
         <div class="font-semibold text-emerald-800">Erik Helmut*</div>
         <div class="text-xs text-emerald-700">Corresponding author</div>
