update farm website

--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
     <div class="rounded-2xl overflow-hidden shadow">
       <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/jqvu804Pk8w" title="Project Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
-    <p class="mt-2 text-sm text-emerald-700">Replace <code>VIDEO_ID</code> with your YouTube ID.</p>
   </section>
 
   <!-- Results (GIF placeholders for paper experiments) -->
@@ -123,7 +122,7 @@
 
     <!-- Author 1 -->
     <div class="card p-4 flex flex-col items-center text-center bg-white/70 rounded-2xl shadow-sm hover:shadow-md transition">
-      <img src="images/erik.png" alt="Erik Helmut" class="w-20 h-20 rounded-full object-cover border-2 border-emerald-200 mb-3" />
+      <img src="assets/erik.png" alt="Erik Helmut" class="w-20 h-20 rounded-full object-cover border-2 border-emerald-200 mb-3" />
       <div>
         <div class="font-semibold text-emerald-800">Erik Helmut*</div>
         <div class="text-xs text-emerald-700">Corresponding author</div>
