--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </a>
 
         <!-- arXiv -->
-        <a class="btn btn-primary flex items-center gap-2" href="#paper">
+        <a  href="https://arxiv.org/abs/2510.13324" target="_blank" rel="noopener"
+            class="btn btn-primary flex items-center gap-2" href="#paper">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M12 2l9 5v10l-9 5-9-5V7l9-5zm0 2.3L5 7.4v9.2l7 3.9 7-3.9V7.4l-7-3.1zm-2.7 9.5h5.4v1.8H9.3v-1.8zm0-3.6h7.2V12H9.3V10.2z"></path>
           </svg>
