add gifs to website and change favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FARM — Force-Aware Robotic Manipulation</title>
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🌱%3C/text%3E%3C/svg%3E">
   <meta name="description" content="Project page for the paper: Tactile-Conditioned Diffusion Policy for Force-Aware Robotic Manipulation (FARM)." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,18 +100,18 @@
       <h2 class="text-2xl font-extrabold text-emerald-900">Results — Paper Experiments</h2>
       <span class="badge">GIFs</span>
     </div>
-    <p class="text-sm text-emerald-700 mb-6">Drop your experiment GIFs matching the paper into <code>assets/gifs/</code> and update filenames if needed.</p>
+    <p class="text-sm text-emerald-700 mb-6">Below are the results from three key experiments: high-force insertion, low-force picking, and dynamic force adaptation.</p>
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
       <figure class="card">
-        <img src="assets/gifs/exp-high-force.gif" alt="High-Force Insertion" class="w-full aspect-video object-cover" />
+        <img src="assets/gifs/plant_insertion.gif" alt="High-Force Insertion" class="w-full aspect-square object-cover" />
         <figcaption class="p-4 text-sm text-emerald-700">Task A — High-Force Insertion</figcaption>
       </figure>
       <figure class="card">
-        <img src="assets/gifs/exp-low-force.gif" alt="Low-Force Picking" class="w-full aspect-video object-cover" />
+        <img src="assets/gifs/grape_picking.gif" alt="Low-Force Picking" class="w-full aspect-square object-cover" />
         <figcaption class="p-4 text-sm text-emerald-700">Task B — Low-Force Picking</figcaption>
       </figure>
       <figure class="card">
-        <img src="assets/gifs/exp-dynamic.gif" alt="Dynamic Force Adaptation" class="w-full aspect-video object-cover" />
+        <img src="assets/gifs/screw_tightening.gif" alt="Dynamic Force Adaptation" class="w-full aspect-square object-cover" />
         <figcaption class="p-4 text-sm text-emerald-700">Task C — Dynamic Force Adaptation</figcaption>
       </figure>
     </div>
